# Hyundai_motors_Gripper

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: protocol.h
python/: art_gripper_client.py  pyproject.toml
scripts/: install_daemon.sh  install_etherlab.sh  restart_gripper.sh
src/: main.cpp  server.cpp  server.h
systemd/: art-gripper-daemon.service
tests/: sanity_check.py
